--- a/index.html
+++ b/index.html
@@ -3,9 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="Images/favicon.jpeg" type="image/jpeg">
     <title>Web Development Course</title>
 </head>
 <body>
-    
+    <a href="https://www.youtube.com/watch?v=BxAdb8K2KDM&themeRefresh=1" target="blank_"><h1>Kevin Levrone Theme Song</h1></a>
+
+    <br><br>
+
+    <video width="500" height="500" controls autoplay loop><source src="Videos/Kevin Levrone Edit ⧸⧸Ed Marquis - Don't Stop the Music Tiktok-(slowed+reverb).mp4" type="video/mp4"></video>
+
+    <a href="https://i.ytimg.com/vi/T3z1sj4WMKA/maxresdefault.jpg"><img src="Images/favicon.jpeg" width="420" height="420"></a><hr>
+
+    <br><br>
+
+    <h2>Lyrics:</h2>
+
+    <pre>        Please don't stop the music, music, music
+        Please don't stop the music, music, music
+        Please don't stop the music, music, music
+        Please don't stop the music, music, music
+
+        It's getting late, I'm making my way over to my favorite place
+        I gotta get my body moving, shake the stress away
+        I wasn't looking for nobody when you looked my way
+        Possible candidate, yeah
+
+        Who knew, that you'd be up in here looking like you do
+        You're makin' staying over here impossible
+        Baby, I'm a say your aura is incredible
+        If you don't have to go, don't
+
+        Do you know what you started? I just came here to party
+        But now we're rockin' on the dance floor, actin' naughty
+        Your hands around my waist just let the music play
+        We're hand in hand, chest to chest, and now we're face to face
+
+        I wanna take you away
+        Let's escape into the music
+        DJ, let it play
+        I just can't refuse it
+        Like the way you do this
+        Keep on rockin' to it
+        Please don't stop the, please don't stop the music
+
+        I wanna take you away
+        Let's escape into the music
+        DJ, let it play
+        I just can't refuse it
+        Like the way you do this
+        Keep on rockin' to it
+        Please don't stop the, please don't stop the, please don't stop the music
+
+        Baby, are you ready 'cause it's gettin' cold
+        Don't you feel the passion ready to explode?
+        What goes on between us no one has to know
+        This is a private show
+
+        Do you know what you started? I just came here to party
+        But now we're rockin' on the dance floor, actin' naughty
+        Your hands around my waist just let the music play
+        We're hand in hand, chest to chest, and now we're face to face
+
+        I wanna take you away
+        Let's escape into the music
+        DJ, let it play
+        I just can't refuse it
+        Like the way you do this
+        Keep on rockin' to it
+        Please don't stop the, please don't stop the music
+
+        I wanna take you away
+        Let's escape into the music
+        DJ, let it play
+        I just can't refuse it
+        Like the way you do this
+        Keep on rockin' to it
+        Please don't stop the, please don't stop the, please don't stop the music
+
+        Please don't stop the music
+        Please don't stop the music, music, music
+        Please don't stop the music, music, music
+
+        I wanna take you away
+        Let's escape into the music
+        DJ, let it play
+        I just can't refuse it
+        Like the way you do this
+        Keep on rockin' to it
+        Please don't stop the, please don't stop the music
+
+        I wanna take you away
+        Let's escape into the music
+        DJ, let it play
+        I just can't refuse it
+        Like the way you do this
+        Keep on rockin' to it
+        Please don't stop the, please don't stop the, please don't stop the music
+
+        Please don't stop the music
+        Please don't stop the music, music, music
+        Please don't stop the music, music, music, music, music, music, music</pre>
+
+        <br><br>
+
+        <a href="page2.html"><h1>NEXT PAGE</h1></a>
 </body>
 </html>
